--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -1,15 +1,30 @@
+<!DOCTYPE html>
 <html>
 
 <head>
 <title>{{title}}{{#title}}, {{/title}}Martus.se</title>
-<link rel="stylesheet" href="style.css"/>
+<style>
+body {
+	background: #334;
+	color: white;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 80%;
+}
+
+.topbox {
+	background: #eef;
+	color: black;
+	padding: 8px;
+	border: 1px solid black;
+	max-width: 900px;
+}
+
+</style>
 </head>
 
 <body>
 
-<div class="screen">
-<div class="col-5 topbox">
-HELOEUH
-</div>
-<div class="col-1 topbox">
+<div align="center">
+<div align="left" class="topbox">
+<h1>Test</h1>
 
