Read articles from disk
Also debug run script.

--- a/templ/front.mustache
+++ b/templ/front.mustache
@@ -1,6 +1,13 @@
 {{> head}}
 
-Front page
+{{#articles}}
+<h2>{{title}} <small>{{date}}</small></h2>
+
+{{contentData}}
+
+<hr/>
+
+{{/articles}}
 
 {{> foot}}
 
