--- a/templ/foot.mustache
+++ b/templ/foot.mustache
@@ -1,6 +1,6 @@
-
-    <script src="js/jquery-1.12.0.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+	  </div>
+    <script src="/js/jquery-1.12.0.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
   </body>
 </html>
 
