--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -7,7 +7,7 @@
 
     <title>{{title}}{{#title}}, {{/title}}Martus.se</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,5 +18,4 @@
   </head>
   <body>
 
-	  <h2>Test</h2>
-
+	  <div class="container">
