Styled hosted projects page

--- a/templ/hosted.mustache
+++ b/templ/hosted.mustache
@@ -1,8 +1,17 @@
 {{> head}}
 
-<h2>Hosted projects</h2>
+<div class="panel panel-default">
+<div class="panel-heading">
+Hosted projects
+</div>
 
-<table>
+<table class="table">
+
+<tr>
+<th>Project</th>
+<th>Author</th>
+<th>Links</th>
+</tr>
 
 {{#items}}
 
@@ -24,6 +33,7 @@
 {{/items}}
 
 </table>
+</div>
 
 {{> foot}}
 
