--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -18,4 +18,20 @@
   </head>
   <body>
 
+	  <nav class="navbar navbar-default">
+		  <div class="container">
+			  <div class="navbar-header">
+				  <a class="navbar-brand" href="/">martus.se</a>
+			  </div>
+
+			  <div class="collapse navbar-collapse">
+				  <ul class="nav navbar-nav">
+					  <li><a href="/">Frontpage</a></li>
+					  <li><a href="/hosted">Hosted projects</a></li>
+					  <li><a href="http://dota.martus.se/">Dota</a></li>
+				  </ul>
+			  </div>
+		  </div>
+	  </nav>
+
 	  <div class="container">
