--- a/templ/part_article.mustache
+++ b/templ/part_article.mustache
@@ -1,3 +1,4 @@
+<div class="blogpost">
 {{#link}}
 <h1><a href="/articles/{{slug}}">{{title}}</a> <small>{{date}}</small></h1>
 {{/link}}
@@ -14,4 +15,5 @@
 </a>
 {{/tags}}
 </p>
+</div>
 
