--- a/templ/foot.mustache
+++ b/templ/foot.mustache
@@ -1,6 +1,8 @@
-	  </div>
-    <script src="/js/jquery-1.12.0.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-  </body>
+</div>
+
+<div class="container">
+<small class="copynote"><br/>Copyright 2016 Martin Sandgren</small>
+</div>
+</body>
 </html>
 
