--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -1,37 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{{title}}{{#title}}, {{/title}}Martus.se</title>
+<title>{{title}}{{#title}}, {{/title}}Martus.se</title>
 
-    <link href="/css/bootstrap.css" rel="stylesheet">
+<style>
+body {
+	background: #ffe;
+	font-size: 90%;
+	margin: 0px;
+}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
+h1 a {
+	color: black;
+	font-style: normal;
+	text-decoration: none;
+}
 
-	  <nav class="navbar navbar-default">
-		  <div class="container">
-			  <div class="navbar-header">
-				  <a class="navbar-brand" href="/">martus.se</a>
-			  </div>
+h1 small {
+	font-size: 60%;
+	color: #886;
+}
 
-			  <div class="collapse navbar-collapse">
-				  <ul class="nav navbar-nav">
-					  <li><a href="/">Frontpage</a></li>
-					  <li><a href="/hosted">Hosted projects</a></li>
-					  <li><a href="http://dota.martus.se/">Dota</a></li>
-				  </ul>
-			  </div>
-		  </div>
-	  </nav>
+p {
+	font-size: 14px;
+	font-family: Georgia, serif;
+}
 
-	  <div class="container">
+a {
+	color: #338;
+}
+
+h1,h2,h3,h4,h5 {
+	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+code {
+	font-family: "Courier New", Courier, monospace;
+	background: #eed;
+	border-radius: 4px;
+	border: 1px solid #889;
+	padding: 1px;
+}
+
+pre {
+	border: 1px solid #889;
+	border-radius: 4px;
+	padding: 4px;
+	background: #eed;
+}
+
+pre code {
+	font-family: "Courier New", Courier, monospace;
+	background: transparent;
+	border-radius: 0px;
+	border: none;
+}
+
+tr {
+	border: 1px solid #889;
+}
+
+/* Table */
+.table {
+	border-collapse: separate;
+	border-spacing: 0px 0px;
+}
+
+.table td,th {
+	text-align: left;
+	border-bottom: 1px solid #aaa;
+	padding: 5px;
+	padding-right: 20px;
+}
+
+.selectable:hover {
+	background: #ddd;
+}
+
+.table a {
+	font-size: 60%;
+	color: black;
+	background: #ccd;
+	padding: 2px;
+	font-style: italic;
+	text-decoration: none;
+	border: 1px solid #333;
+	border-radius: 2px;
+}
+
+/* Post segments */
+.topbar {
+	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+	background: #223;
+	color: white;
+	margin: 0px;
+	padding: 12px;
+}
+
+.topbar a {
+	color: white;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.blogtop {
+	background: #dda;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	margin: 0px;
+	padding: 12px;
+}
+
+.blogtop h1 {
+	margin: 2px;
+}
+
+.blogpost {
+	border: 1px #777 solid;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	border-radius: 4px;
+	padding: 0px;
+	box-shadow: 1px 3px 4px #aaa;
+}
+
+.narrow {
+	margin-left: 40px;
+	margin-right: 40px;
+}
+
+/* Logo */
+.logo {
+	font-family: Arial;
+	font-weight: bold;
+	color: white;
+	border: 2px solid #bbb;
+	border-radius: 6px;
+	padding: 6px;
+}
+
+.blogbody {
+	padding: 0px;
+	padding-left: 12px;
+	padding-right: 12px;
+}
+
+.tag {
+	font-family: Arial,sans-serif;
+	font-weight: bold;
+	font-size: 13px;
+	text-decoration: none;
+	border: 1px solid black;
+	border-radius: 2px;
+	background: #bba;
+	color: black;
+	padding: 2px;
+}
+
+.copynote {
+	margin: 32px;
+	padding: 32px;
+	color: #778;
+}
+
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 800px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 800px;
+  }
+}
+</style>
+
+</head>
+<body>
+
+<div class="topbar"><div class="container">
+<span class="logo">Martus.se</span>
+ - <a href="/">Frontpage</a>
+ - <a href="/hosted">Hosted projects</a>
+ - <a href="http://dota.martus.se/">Dota</a>
+</div></div>
+
+<div class="container">
