fix: Black tags

--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -155,9 +155,9 @@ tr {
 	font-size: 13px;
 	text-decoration: none;
 	border: 1px solid black;
-	border-radius: 2px;
-	background: #bba;
-	color: black;
+	border-radius: 4px;
+	background: #333;
+	color: white;
 	padding: 2px;
 }
 
