--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -82,14 +82,15 @@ tr {
 }
 
 .table a {
-	font-size: 60%;
-	color: black;
-	background: #ccd;
-	padding: 2px;
-	font-style: italic;
+	font-family: Arial,sans-serif;
+	font-weight: bold;
+	font-size: 13px;
 	text-decoration: none;
-	border: 1px solid #333;
-	border-radius: 2px;
+	border: 1px solid black;
+	border-radius: 4px;
+	background: #333;
+	color: white;
+	padding: 2px;
 }
 
 /* Post segments */
