fix: h? tags adjustments

--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -25,9 +25,21 @@ h1 small {
 	color: #886;
 }
 
+h2 { font-size: 16px; }
+h3 { font-size: 14px; }
+h4 { font-size: 12px; }
+
+.blogbody h2, h3, h4 {
+	margin-bottom: 4px;
+	margin-top: 12px;
+	font-weight: none;
+}
+
 p {
 	font-size: 14px;
 	font-family: Georgia, serif;
+	margin-top: 8px;
+	margin-bottom: 8px;
 }
 
 a {
