chore: Style uppdate

--- a/templ/part_article.mustache
+++ b/templ/part_article.mustache
@@ -10,13 +10,15 @@
 
 <div class="blogbody">
 {{{content}}}
+</div>
 
-<p>
+<hr/>
+
+<div class="blogfoot"><p>
 {{#tags}}
 <a class="tag" href="/tags/{{slug}}">#{{name}}</a>
 {{/tags}}
-</p>
-</div>
+</p></div>
 
 </div>
 
