--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -15,7 +15,7 @@ body {
 }
 
 h1 a {
-	color: black;
+	color: #444;
 	font-style: normal;
 	text-decoration: none;
 }
@@ -25,6 +25,7 @@ h1 small {
 	color: #886;
 }
 
+h1 { font-size: 20px; }
 h2 { font-size: 16px; }
 h3 { font-size: 14px; }
 h4 { font-size: 12px; }
@@ -33,6 +34,11 @@ h4 { font-size: 12px; }
 	margin-bottom: 4px;
 	margin-top: 12px;
 	font-weight: none;
+}
+
+hr {
+	border: none;
+	border-top: 1px solid #999;
 }
 
 p {
@@ -47,6 +53,7 @@ a {
 }
 
 h1,h2,h3,h4,h5 {
+	color: #444;
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
@@ -125,20 +132,26 @@ tr {
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 	margin: 0px;
-	padding: 12px;
+	padding: 8px;
 }
 
 .blogtop h1 {
-	margin: 2px;
+	margin: 0px;
+}
+
+.blogfoot {
+	padding-bottom: 4px;
+	padding-left: 12px;
+	padding-right: 12px;
 }
 
 .blogpost {
-	border: 1px #777 solid;
+	border: 1px #999 solid;
 	margin-bottom: 10px;
 	margin-top: 10px;
 	border-radius: 4px;
 	padding: 0px;
-	box-shadow: 1px 3px 4px #aaa;
+	box-shadow: 3px 6px 10px #ccc;
 }
 
 .narrow {
