feat: Blog archive

--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -222,8 +222,8 @@ tr {
 <div class="topbar"><div class="container">
 <span class="logo">Martus.se</span>
  - <a href="/">Frontpage</a>
+ - <a href="/archive">Archive</a>
  - <a href="/hosted">Hosted projects</a>
- - <a href="http://dota.martus.se/">Dota</a>
 </div></div>
 
 <div class="container">
