--- a/templ/part_preview.mustache
+++ b/templ/part_preview.mustache
@@ -1,2 +1,2 @@
-<div><small>{{date}}</small> - <a href="/article/{{slug}}">{{title}}</a></div>
+<div><small>{{date}}</small> - <a href="/articles/{{slug}}">{{title}}</a></div>
 
