fix: Code segment smaller

--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -61,7 +61,7 @@ code {
 	font-family: "Courier New", Courier, monospace;
 	background: #eed;
 	border-radius: 4px;
-	border: 1px solid #889;
+	border: 0px;
 	padding: 1px;
 }
 
