--- a/templ/head.mustache
+++ b/templ/head.mustache
@@ -220,8 +220,8 @@ tr {
 <body>
 
 <div class="topbar"><div class="container">
-<span class="logo">Martus.se</span>
- - <a href="/">Frontpage</a>
+<a href="/"><span class="logo">Martus.se</span></a>
+ - <a href="/">Journal</a>
  - <a href="/archive">Archive</a>
  - <a href="/hosted">Hosted projects</a>
 </div></div>
